[tool.poetry]
name = "muffin-cupcake"
version = "0.1.0"
description = ""
authors = ["Roland Siegbert <roland@siegbert.info>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.0.1"
numpy = "^1.18.1"
sklearn = "^0.0"
seaborn = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
